# dodobot-ros

./: .gitignore  README.md
dashboard/: .eslintcache  README.md  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.tsx
dataset_builder/: export.py  main.py  train.py
docs/: local_setup.md  robot_setup.md
dodobot_py/: code_copy.sh  config_copy.sh  copy.sh  install.sh  uninstall.sh  upload_and_copy.sh
dodobot_py/dodobot_py/: main.py  requirements.txt
dodobot_py/systemd/: dodobot_py  dodobot_py.service  install_systemd.sh  uninstall_systemd.sh
dodobot_serial_bridge/: CMakeLists.txt
dodobot_serial_bridge/launch/: dodobot_serial_bridge.launch
dodobot_serial_bridge/msg/: DodobotBumper.msg  DodobotDrive.msg  DodobotGripper.msg  DodobotLinear.msg  DodobotTilter.msg
dodobot_serial_bridge/srv/: DodobotMenuSrv.srv  (+1 more)
install/: deploy.sh  exclude.txt  restart.sh  upload.sh
joystick/: py_joystick.yaml  ros_joystick.yaml  use_py_joystick.sh  use_ros_joystick.sh
launch/: auto_charge.launch  deep_learning.launch  dodobot.launch  drive.launch  localize.launch  map.launch  move_base.launch  objects.launch  objects_from_bag.launch  pick_and_place.launch  record.launch  stress_test_linear.launch  waypoints.launch
networking/: NetworkManager.conf  dhcpcd.conf  dnsmasq.conf  hostapd.conf  hotspot_instructions.md  hotspot_setup.sh  interfaces  rc.local  restart-wifi.sh  ssh_instructions.md
playground/: play_song.py
scripts/: bashrc_append.txt  build_packages_ws.sh  chansey.txt  convert_bag.sh  dataset_reformatter.py  default.rviz  dependencies.sh  dependencies.txt  downgrade_package_version.sh  follow_waypoints.sh  install.sh  install_python_libraries.sh  local_session.sh  play_song.sh  requirements.txt  reset_odom.sh  restart.sh  restart_launch.sh  ros_build_setup.sh  rviz.desktop  set_bashrc.sh  set_client.sh  set_master.sh  set_robot_waypoint.sh  start.sh  startup.sh  status.sh  stop.sh  stop_song.sh  tail-session.sh
src/db_chassis/: CMakeLists.txt  package.xml  setup.py
src/db_chassis/cfg/: DodobotChassis.cfg
src/db_chassis/config/: db_chassis.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/db_chassis/include/db_chassis/: db_chassis.h
src/db_chassis/launch/: db_chassis.launch  twist_mux.launch
src/db_chassis/msg/: LinearPosition.msg  LinearVelocity.msg
src/db_chassis/speed_profiler/: bag2csv.py
src/db_chassis/src/: db_chassis_node.cpp  db_chassis_node.py  geometric_estimator.py  odom_estimator.py  runge_kutta_estimator.py
src/db_chassis/src/db_chassis/: db_chassis.cpp
src/db_chassis/srv/: DodobotOdomReset.srv
src/db_gazebo/: CMakeLists.txt  package.xml
src/db_gazebo/launch/: dodobot_world.launch  load_model.launch
src/db_laser_slam/: CMakeLists.txt  package.xml  setup.py
src/db_laser_slam/config/: amcl.yaml  gmapping.yaml
src/db_laser_slam/launch/: db_laser_slam.launch  gmapping_from_bag.launch  hector_slam.launch  odom_listener.launch  record_laser.launch  slam_from_bag.launch
src/db_laser_slam/launch/sublaunch/: amcl.launch  fake_map.launch  gmapping.launch  map_saver.launch  rplidar.launch
src/db_laser_slam/maps/: rapid-react-2022-02-19T07-55-53--407688-edited.pgm  rapid-react-2022-02-19T07-55-53--407688-edited.yaml
src/db_laser_slam/src/: db_laser_slam_node.py  odom_bag_publisher.py  odom_listener.py
src/db_laser_slam/srv/: GetSlamMode.srv  SetSlamMode.srv
src/db_planning/: CMakeLists.txt  package.xml  setup.py
src/db_planning/action/: Chassis.action  FrontLoader.action  Gripper.action  ObjectPursuit.action  SequenceRequest.action
src/db_planning/config/: central_planning.yaml
src/db_planning/config/ekf/: ekf.yaml
src/db_planning/launch/: ar_track_alvar.launch  chassis_planning.launch  db_planning.launch  fake_map.launch  pursuit_test.launch  tag_conversion.launch
src/db_planning/sequences/: delivery.yaml  extract-backup.csv  extract-grab-to-align.csv  extract-old.csv  extract-raw.csv  extract.csv  insert-old.csv  insert-raw.csv  insert-with-finagling.csv  insert.csv  pickup.yaml
src/db_planning/src/: basic_guidance.py  central_planning.py  chassis_planning.py  front_loader_planning.py  planning_base.py  planning_front_loader.py  sequence.py
src/db_planning/src/db_planning/: bp_path_maker.py  central_planning.py  chassis_planning.py  chassis_state.py  front_loader_planning.py  goal_controller.py  gripper_planning.py  pid.py  pulseaudio.py  pursuit_planning.py  recursive_namespace.py  robot_state.py  sequence.py  sequence_state_machine.py  simple_planning.py  sounds.py  tag_conversion.py
src/db_planning/src/db_planning/pursuit/: __init__.py  drive_towards.py  pursuit_action.py  pursuit_manager.py  turn_final.py  turn_towards.py
src/db_planning/src/db_planning/states/: __init__.py  base_pursue_state.py  deliver_state.py  move_to_object_state.py  move_to_park_state.py  pickup_state.py  precheck_state.py  pursue_dock_state.py  pursue_object_state.py  pursue_undock_state.py
src/db_planning/src/db_planning/twist_controllers/: ramsete_controller.py  siegwart_controller.py  twist_controller.py
src/db_planning/srv/: FrontLoaderGrab.srv  FrontLoaderMove.srv  FrontLoaderPlan.srv  GrabbingSrv.srv
src/db_yolo/: CMakeLists.txt  package.xml  setup.py
src/db_yolo/cfg/: YoloDetection.cfg
src/db_yolo/config/: depth_estimations.yaml
src/db_yolo/include/: db_yolo.h  detector.h
src/db_yolo/launch/: db_yolo.launch  db_yolo_py.launch
src/db_yolo/scripts/: db_yolo_node.py
src/db_yolo/src/: db_yolo.cpp  detector.cpp  tj2_yolo.cpp
src/image_logger/: CMakeLists.txt  package.xml  setup.py
src/image_logger/launch/: image_logger.launch  image_publisher.launch  keyboard.launch
src/image_logger/src/: image_logger.py  image_publisher.py  keyboard_listener.py
systemd/: copy.sh  env.sh  install_systemd.sh  roscore.service  roscore.sh  roslaunch.service  roslaunch.sh  uninstall_systemd.sh
training/: build_dataset.py  export.py  export.sh  fix_onnx_model.py  freeze_model.py  model_lib_v2.py  model_main_tf2.py  tensorboard.sh  test_model.py  to_onnx.sh  train.py  train.sh
(+654 files in other folders)
