<package>
  <name>db_gazebo</name>
  <version>0.1.0</version>
  <description>db_gazebo</description>
  <maintainer email="woz4tetra@gmail.com">Ben Warwick</maintainer>

  <license>BSD</license>

  <url type="website"></url>
  <url type="bugtracker"></url>
  <url type="repository"></url>

  <author email="woz4tetra@gmail.com">Ben Warwick</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
